k8s/04-write-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: write-api
  template:
    metadata:
      labels:
        app: write-api
        role: api
    spec:
      containers:
      - name: write-api
        image: write-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: write-api
spec:
  type: NodePort
  selector:
    app: write-api
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080 # Exposes Write API on http://localhost:30080
