k8s/06-read-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: read-api
  template:
    metadata:
      labels:
        app: read-api
        role: api
    spec:
      containers:
      - name: read-api
        image: read-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: read-api
spec:
  type: NodePort
  selector:
    app: read-api
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001 # Read API exposed on http://localhost:30001
